Third Attempt to fix font on mobile

--- a/HomePageStyle.css
+++ b/HomePageStyle.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Comic Sans MS';
+    font-family: 'SillyFont';
     src: url("comic-sans-ms/comici.ttf");
   }
 
@@ -8,8 +8,7 @@ body {
     text-align: center;
     color: rgb(59, 47, 61);
 
-    font-family: 'Comic Sans MS';
-    src: url("Fonts/comici.ttf");
+    font-family: 'SillyFont';
 }
 a{
     color:rgb(138, 54, 202);
