--- a/Otter Facts/OtterFactsStyle.css
+++ b/Otter Facts/OtterFactsStyle.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Comic Sans MS';
+    font-family: 'SillyFont';
     src: url("comic-sans-ms/comici.ttf");
   }
 
@@ -7,8 +7,7 @@ body {
     background-color: rgb(237, 225, 211);
     text-align: center;
     color: rgb(59, 47, 61);
-    font-family: 'Comic Sans MS';
-    src: url("Fonts/comici.ttf");
+    font-family: 'SillyFont';
 }
 
 button {
@@ -23,8 +22,7 @@ button {
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 4px;
-    font-family: 'Comic Sans MS';
-    src: url("Fonts/comici.ttf");
+    font-family: 'SillyFont';
 }
 
 .OtterBut {
