--- a/Wordle/Wordle.css
+++ b/Wordle/Wordle.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Comic Sans MS';
+    font-family: 'SillyFont';
     src: url("comic-sans-ms/comici.ttf");
   }
 
@@ -7,8 +7,7 @@ body {
     background-color: rgb(237, 225, 211);
     text-align: center;
     color: rgb(59, 47, 61);
-    font-family: 'Comic Sans MS';
-    src: url("Fonts/comici.ttf");
+    font-family: 'SillyFont';
 }
 
 hr {
